# CHIP-8-emulator

./: .gitignore  CMakeLists.txt  README.md
roms/: sifuf.ch8  sifuf.src
src/: CHIP8.cpp  CHIP8.hpp  CPU.cpp  CPU.hpp  defs.hpp  font.hpp  main.cpp
